--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,13 +1,24 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions} \label{sec_conc}
-We have adapted the MIP form of DSA to PieceWise Linear Discontinuous finite elements
-and proposed a simple way to compute the penalty coefficient, enabling the 
-use of MIP on arbitrary polygonal meshes. The advantage is the potential 
-reduction of the numbers of unknowns and the possibility to use adaptive mesh 
-refinement without having hanging nodes. We have performed two Fourier analyses 
-of the new MIP-DSA on rectangular cell and shown that MIP is always stable when 
-the scattering is isotropic. On three different examples, we tested MIP on highly
-unstructured meshed composed of different types of cells. We noticed that the
-efficiency of MIP does not seem to be degraded on these meshes. We have also
-compared different preconditioners for CG to solve MIP. Algebraic multigrid
-methods were found to be the best preconditioner, AGMG being more than 20 times
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+We have extended the Modified Interior Penalty (MIP) form of Diffusion Synthetic Acceleration (DSA) 
+to arbitrary polygonal grids discretized with Piece-Wise Linear Discontinuous finite elements. 
+%We proposed a simple way to compute the penalty coefficient on such grids. 
+Tests were run on meshes with various types of polygonal cells,
+%. The advantage of is the potential 
+%reduction of the numbers of unknowns and the possibility to use adaptive mesh 
+%refinement without having hanging nodes. 
+Fourier analyses (with isotropic scattering) on rectangular cells show
+that this PWLD discretization MIP-DSA is always stable, including for high-aspect ratio cells. 
+Numerical experiments have been performed on several polygonal grids, including
+tests with different polygon types for a given grid and tests with degenerated polygons that mimic
+grids obtained in adaptive mesh refinement strategies. MIP-DSA always performed satisfactorily,
+reducing significantly the number of  Source Iterations needed for convergence. 
+We noted that the efficiency of MIP does not seem to be affected by such these meshes. 
+The MIP-DSA matrix is SPD and we compared different preconditioners for CG to solve the resulting equations. 
+Algebraic multigrid methods were found to be the best preconditioner, with AGMG being more than 20 times
 faster than CG without preconditioning.
+
