--- a/introduction.tex
+++ b/introduction.tex
@@ -23,7 +23,7 @@ extra point inside the cell, the hexagon could also be split into three quadrang
 similar reasoning can be applied to any $n$-polygon. Arbitrary polygonal grids can 
 also handle locally refined meshes in a natural manner. Consider the example given
 in \Cref{fig_amr}, which is typical of simulations performed with Adaptive Mesh 
-Refinement. Solvers based on arbitrary polyhedral cells can easily handle cells 
+Refinement (AMR). Solvers based on arbitrary polyhedral cells can easily handle cells 
 with various numbers of edges. On \Cref{fig_amr}, the left cell is a actually a
 pentagon whereas the two cells on the right are quadrilaterals. PWLD spatial
 discretization can handle locally adapted meshes without any special treatment 
