--- a/mip.tex
+++ b/mip.tex
@@ -160,7 +160,7 @@ any polygon as a function of the number of vertices is given in
 \Cref{table_h_bot}.
 \begin{table}[H]
   \begin{center}
-    \caption{Orthogonal length $h_{\bot}$ for different polygons.}
+    \caption{Orthogonal length $h_{\bot}$ for different polygon types.}
     \begin{tabular}{|c|c|c|c|c|}
       \hline
       Number of vertices & 3 & 4 & $> 4$ and even & $> 4$ and odd \\
