--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -53,7 +53,7 @@
 
 
 \begin{document}
-\title{Discontinuous Diffusion Synthetic Acceleration for Sn Transport on
+\title{Discontinuous Diffusion Synthetic Acceleration for \sn Transport on
 2D Arbitrary Polygonal Meshes}
 \author{} 
 \date{}
@@ -66,6 +66,8 @@
 \input{algebraic_multigrid}
 \input{results}
 \input{conclusions}
+\textcolor{red}{Is this appendix needed?}
+\input{appendix}
 
 % bibliography
 \bibliographystyle{unsrt}
