--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -66,8 +66,8 @@
 \input{algebraic_multigrid}
 \input{results}
 \input{conclusions}
-\textcolor{red}{Is this appendix needed?}
-\input{appendix}
+%\textcolor{red}{Is this appendix needed?}
+%\input{appendix}
 
 % bibliography
 \bibliographystyle{unsrt}
