--- a/abstract.tex
+++ b/abstract.tex
@@ -9,7 +9,7 @@
   is symmetric and positive definite. This system is typically solved using
   Conjugate Gradient (CG) preconditioned with a \textcolor{red}{Symmetric Gauss-Seidel}
   (SGS) scheme. In this research, we also compare SGS-preconditioned CG with 
-  GG preconditioned using an Algebraic MultiGrid  method (AMG). 
+  CG preconditioned using an Algebraic MultiGrid  method (AMG). 
   Fourier analyses are 
   performed for the PWLD MIP formulation and we show that this scheme is
   always stable and effective at reducing the spectral radius for iterative transport
