--- a/biblio.bib
+++ b/biblio.bib
@@ -297,6 +297,7 @@
   title = {{User's Guide to AGMG}},
   author = {Yvan Notay},
   institution = {Universite Libre de Bruxelles},
+  url = {http://homepages.ulb.ac.be/~ynotay/AGMG},
   year = {2011}
 }
 @Article{agmg,
@@ -315,6 +316,16 @@
   volume = {34},
   number = {2},
   pages = {1079-1109}
+}
+@Article{agmg3,
+  title = {{Aggregation-based algebraic multigrid for convection-diffusion
+    equations}},
+  author = {Yvan Notay},
+  journal = {SIAM Journal of Scientific Computing},
+  year = {2012},
+  volume = {34},
+  number = {4},
+  pages = {2288-2316}
 }
 @Article{k_cycle,
   title = {{Recursive Krylov-based multigrid cycles}},
