--- a/introduction.tex
+++ b/introduction.tex
@@ -9,7 +9,7 @@ that is fully compatible with the Piece-Wise Linear Discontinuous (PWLD) finite
 element discretization of the transport equation on arbitrary
 polygonal cells. 
 
-Arbitrary polygonal (polyhedral in 3D) cells can advantageously employed, especially
+Arbitrary polygonal (polyhedral in 3D) cells can advantageously be employed, especially
 in the context of spatial discretizations based on discontinuous finite elements (DFE).
 Such grids may allow for a reduced numbers of unknowns and/or can provide a natural
 transition for locally adapted meshes. To illustrate these two points, first consider
@@ -40,9 +40,9 @@ or further approximation of the coupling between cells.
 %\subsection{Rationale for DSA preconditioning}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Next, we first recall the rationale for acceleration schemes (preconditioners) 
+Next, we recall the rationale for acceleration schemes (preconditioners) 
 \textcolor{red}{applied to the iterative solution of
-transport problems / when solving iteratively transport problems.}
+transport problems (/ when solving iteratively transport problems).}
 Because analytical solutions are unavailable for most
 radiation transport problems of practical interest, one typically employs
 iterative techniques to solve the large system of equations that results from
@@ -126,7 +126,8 @@ discretization using the PWLD technique, and the Source Iteration iterative sche
 The MIP scheme is reviewed and extended to the PWLD discretization for arbitrary 
 polygons in \Cref{sec_mip}. In \Cref{sec_amg}, we introduce the Algebraic MultiGrid (AMG) 
 approaches used here: the ML package of Trilinos \cite{ml_guide} and the
-AGMG (AGgregation-based algebraic MultiGrid) technique \cite{agmg_guide}. In
+AGMG (AGgregation-based algebraic MultiGrid) technique
+\cite{agmg_guide,agmg,agmg2,agmg3}. In
 \Cref{sec_res}, we present a Fourier analysis for the MIP scheme discretized with
 PWLD and we compare the different AMG with preconditioned CG solver.
 Conclusions are given in \Cref{sec_conc}.
