--- a/results.tex
+++ b/results.tex
@@ -5,7 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 In this section, we present two series of results. First, Fourier analyses are 
-carried out to analyze the performeance of the MIP-DSA acceleration scheme 
+carried out to analyze the performance of the MIP-DSA acceleration scheme 
 for an homogeneous infinite medium meshed with rectangular cells and discretized with PWLD.
 The effects of the $S_n$ order and the cell aspect ratio on the spectral radius of the iterative 
 scheme are also studied. Second, the MIP-DSA technique is implemented in a 2D \sn code that uses
@@ -34,12 +34,10 @@ respectively. \textcolor{red}{check that} The error modes are of the form $\exp(
 wave number $\bs{\Lambda}=[\lambda_x,\, \lambda_y]^T$. The expressions for these modes 
 are inserted into the discretized equations and the spectral radius (largest eigenvalue in magnitude)
 of the iteration matrices are sought for $0 \le \lambda_x \le 2\pi/X$ and $0 \le \lambda_y \le 2\pi/Y$,
-where $X$, and $Y$ are the dimensions of the rectangular domain. The eigenvalues are obtained
-using the {\tt eig} function of MATLAB and the search for the spectral radius is performed
-using the Nelder-Mead simplex algorithm in MATLAB.
+where $X$, and $Y$ are the dimensions of the rectangular domain.
 
 
-\subsubsection{Spectral radius as a function of the \sn order}
+\subsubsection{Spectral radius as a function of the $S_n$ order}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 This Fourier analysis is carried on a square cell ($X=Y$), using a
@@ -69,7 +67,7 @@ On \Cref{fig_fa_ar}, the five curves correspond to the following cell aspect
 ratios: $\frac{Y}{X}=\frac{1}{16}$, $\frac{Y}{X}=\frac{1}{4}$,
 $\frac{Y}{X}=1$, $\frac{Y}{X}=4$, $\frac{Y}{X}=16$, and $\frac{Y}{X}=100$.
 We note that the MIP-DSA scheme is stable for every aspect ratio tested, including 100, 
-and that the maximum spectral radius shows little sensitivity the the aspect ratio.
+and that the maximum spectral radius shows little sensitivity the aspect ratio.
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.7\textwidth]{aspect_ratio_9999_2}
@@ -94,8 +92,8 @@ use an $S_8$ GLC angular quadrature, Source Iteration as solver
 with relative tolerance of $10^{-8}$ and a relative tolerance of
 $10^{-10}$ for MIP-DSA solver. The medium is discretized using two different meshes:
 \begin{enumerate}
-  \item a quadrilateral gridcomposed of 49236 quadrilateral
-    cells (197,052 degrees of freedom); \textcolor{red}{$49236*4\ne 197052$!!!}
+  \item a quadrilateral gridcomposed of 49263 quadrilateral
+    cells (197,052 degrees of freedom); 
   \item a polygonal grid composed of 45,204 triangles, 823
     quadrilaterals, 4,978 pentagons, 4,155 hexagons, 725 heptagons, and 24
     octagons, for a total of 55,909 cells and 193,991 degrees of freedom. This
@@ -128,7 +126,7 @@ is once again the bottleneck of the method.
 The different linear solvers are compared for the polygonal grid in \Cref{comparison_homog_poly}:
 We note that using different spatial cell types in the same grid does not affect
 the performance of MIP-DSA or that of its preconditioners.
-%
+
 \textcolor{red}{why is the min value in the colorbar different for these 2 grids??? The grids seem refined enough ....}
 
 \textcolor{red}{also, add the vtk to the repo in case I would like to do a zoom in to better show the quadrilateral/polygonal cells}
@@ -280,23 +278,22 @@ The conclusions drawn from this test case are similar to the ones made for
 our previous tests. This test case demonstrates that degenerate polygons 
 (here, pentagons and hexagons) do not seem to affect the MIP-DSA acceleration.
 
-%
+
 \begin{figure}[!htbp]
   \centering
   \begin{subfigure}{0.75\textwidth}
     \centering
     \includegraphics[width=6cm]{zone_amr}
     \caption{Material regions}
-    \label{mat_amr}
+%    \label{mat_amr}
   \end{subfigure}
   \begin{subfigure}{0.75\textwidth}
     \centering
     \includegraphics[width=6cm]{polygon_amr}
     \caption{Polygons distribution (the blue cells are quadrilaterals, the green cells are pentagons, and the red cells are hexagons)}
-    \label{fig_pol_dist}
+%    \label{fig_pol_dist}
   \end{subfigure}
   \caption{AMR-like test domain}
-  \label{zone_amr}
 \end{figure}
 %
 \begin{table}
@@ -305,7 +302,7 @@ our previous tests. This test case demonstrates that degenerate polygons
     \begin{tabular}{|c|c|c|c|}
       \hline
       & Inner region & Intermediate region & Outer region  \\ \hline
-    $\Sigma_t$ $(cm^{-1})$ & 1.5  & 1.  & \textcolor{red}{1.0 ?} \\
+    $\Sigma_t$ $(cm^{-1})$ & 1.5  & 1.0 & 1.0 \\
     $\Sigma_s$ $(cm^{-1})$ & 1.44 & 0.9 & 0.3 \\
   Source $(cm^{-3}s^{-1})$ & 1.0  & 0.0 & 0.0 \\
       \hline
@@ -313,13 +310,13 @@ our previous tests. This test case demonstrates that degenerate polygons
     \label{prop_amr}
   \end{center}
 \end{table}
-%
-%where the blue cells are quadrilaterals, the green cells are pentagons, and
-%the red cells are hexagons. This mesh is typical of a mesh obtained after one 
-%level of adaptive mesh
-%refinement (the cells at the interface of different materials have been refined
-%once). We see that instead of introducing hanging nodes, we have introduce
-%pentagons and hexagons in the mesh.
+
+where the blue cells are quadrilaterals, the green cells are pentagons, and
+the red cells are hexagons. This mesh is typical of a mesh obtained after one 
+level of adaptive mesh
+refinement (the cells at the interface of different materials have been refined
+once). We see that instead of introducing hanging nodes, we have introduce
+pentagons and hexagons in the mesh.
 \begin{table}[H]
   \caption{Comparison of preconditioners on AMR mesh}
   \begin{center}
